Implementation of asynchronous calls and scoring function. - Asynchronously call Mask RCNN API and Google Vision API. After both call succeed, calculate the score and call /api/update. On /api/update success, go to the post page. Check script.js for more info. - Updated the Rate page. Results do not show up in that page anymore. - Fixed bugs. Made `img_post` in PredictedImagePost OneToOneField and made it as the primary key. Updated the admin page PredictedImgPost's display function to reflect that. - Added proper form validation with error messages using Bootstrap alerts. Check it out by making requests without the server on or by choosing invalid images or by typing in invalid email addresses. - Changed homepage background, didn't do too much to it. But made some minor design tweaks. - Added http 404 page. Only works in production mode. So ignore this for now.
- Updated script.js (SEE PR#34)

--- a/PP_APP/server/frontend/static/css/style.css
+++ b/PP_APP/server/frontend/static/css/style.css
@@ -199,8 +199,8 @@ background-image: linear-gradient(315deg, #29539b 0%, #2a74ff 74%);
   /* background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 80%, #0000008a 100%), url("../img/fig.png"); */
   /* background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 80%, #0000008a 100%), url("../img/bg-masthead-1-min.jpg"); */
   /* background: url("../img/bg-masthead-1-min.jpg"); */
-  /* background-image: linear-gradient( 248.1deg,  rgba(255,200,69,1) -0.1%, rgba(48,195,158,1) 100.5% ); */
-  background-image: linear-gradient( 248.1deg,  rgb(0, 196, 65,.1) -0.1%, rgba(48,195,158,.2) 100.5% ), url("../img/bg-masthead-1-min.jpg");
+  background-image: linear-gradient( 248.1deg,  rgba(255,200,69,1) -0.1%, rgba(48,195,158,1) 100.5% );
+  /* background-image: linear-gradient( 248.1deg,  rgb(0, 196, 65,.1) -0.1%, rgba(48,195,158,.2) 100.5% ), url("../img/bg-masthead-1-min.jpg"); */
   /* background-image: radial-gradient( circle farthest-corner at 6.4% 9.8%,  rgba(88,242,174,1) 0%, rgba(0,130,240,1) 97.9% ); */
   /* background-position: center; */
   background-repeat: no-repeat;
@@ -222,19 +222,14 @@ background-image: linear-gradient(315deg, #29539b 0%, #2a74ff 74%);
 
 .masthead h1 {
   font-family: 'Basic', sans-serif;
-  font-size: 4rem;
+  font-size: 3rem;
   color: #fff;
-  /* line-height: 2.5rem; */
-  /* letter-spacing: 0.8rem; */
-  /* background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0)); */
-  /* background: -webkit-linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 1)); */
-  /* -webkit-text-fill-color: transparent; */
-  /* -webkit-background-clip: text; */
 }
 
 .masthead h2 {
-  max-width: 20rem;
-  font-size: 1rem;
+  font-family: 'Basic', sans-serif;
+  font-size: 4rem;
+  color: #fff;
 }
 
 @media (min-width: 768px) {
@@ -270,7 +265,7 @@ background-image: linear-gradient(315deg, #29539b 0%, #2a74ff 74%);
 #section01 a span {
   position: absolute;
   top: 0;
-  left: 48%;
+  left: 45%;
   width: 24px;
   height: 24px;
   margin-left: -12px;
@@ -284,7 +279,7 @@ background-image: linear-gradient(315deg, #29539b 0%, #2a74ff 74%);
 #section01 a {
   position: absolute;
   bottom: 20px;
-  left: 48%;
+  left: 45%;
   z-index: 2;
   display: inline-block;
   -webkit-transform: translate(0, -50%);
@@ -303,8 +298,8 @@ background-image: linear-gradient(315deg, #29539b 0%, #2a74ff 74%);
 .dropzone {
 	width: 100%;
 	height: 25rem;
-	border: 2px dashed #ccc;
-	color: #ccc;
+	border: 0px dashed #ccc;
+	color: #fff;
   padding: 5rem;
   background-image: url("../img/sample_top.jpg");
   background-color: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 80%, #0000008a 100%);
